# UGC

./: .pre-commit-config.yaml  README.md  pyproject.toml
benchmark/: clickhouse.ipynb  clickhouse_with_null.ipynb  docker-compose.bench.yml  mongo.ipynb
etl/: migrator.py
ugc/src/: __init__.py
ugc/src/schemas/: __init__.py
