[tool.poetry]
name = "UGC app"
description = "Yandex.Practicum. Sprint 8."
version = "2022.4.1"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
aiokafka = "^0.11.0"
python-jose = "^3.3.0"
gunicorn = "^22.0.0"
aiochclient = "^2.6.0"
sentry-sdk = "^2.10.0"
fastapi = {extras = ["all"], version = "^0.111.1"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
black = "^24.4.2"
isort = "^5.13.2"
coverage = "^7.5.1"
flake8 = "^7.0.0"
mypy = "^1.10.1"
pylint = "^3.1.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
clickhouse-driver = "^0.2.7"
pandas = "^2.2.2"
pymongo = "^4.7.1"
jupyter = "^1.0.0"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | venv
  | build
  | dist
)/
'''


[tool.isort]
profile = "black"
multi_line_output = 9


[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = "*.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true


[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "too-many-arguments",
]

ignored-modules = ["pydantic", "flask_sqlalchemy"]
good-names = []

[tool.pylint.similarities]
ignore-imports = true
ignore-docstrings = true
ignore-comments = true


[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(levelname)-5.5s [%(name)s] %(message)s"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
